--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <!-- Y aquí está nuestro pie de página principal que se utiliza en todas las páginas de nuestro sitio web -->
 
     <footer>
+
+	<p> añadido un footer superguay </P> 
+
     </footer>
   </body>
 </html>
