Cambios al header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Aquí empieza el encabezado principal que se mantendrá en todas las páginas del sitio web -->
 
     <header>
-      <h1>Encabezado</h1>
+      <h1> Título d la página web </h1>
     </header>
 
     <!-- Aquí está el contenido principal de nuestra página -->
